# teacher-quality-monitoring

./: .env.example  .gitignore  DECISIONS.md  PLAN.md  README.md  batch_long_video.py  batch_score.py  migration_log.txt  pyproject.toml  requirements.txt  test_render.py  tqm_db.py
.devcontainer/: devcontainer.json
_archive/rubric/: rubric_v0_1.yaml
adapters/: llm.py  retry.py  sessions.py
adapters/_archive/: db.py  llm_legacy_methods.py  sessions_legacy.py
data/: cctv_cameras.xlsx  tqm_answers.xlsx
data/question_bank/: questions.csv
data/spotlight_questions/: questions.yaml
frontend/: DEPLOY.md  quality_app.py
pipeline/: answers_book.py  boundaries.py  evidence.py  render.py  rubric.py  score.py  session_context.py  session_video.py  types.py  vision.py
pipeline/_archive/: boundaries_legacy.py  evidence_legacy.py  extract.py  items.py  legacy_rubric_types.py  legacy_score_types.py  render_legacy.py  session_context_legacy.py
prompts/: detect_boundaries.md  rubrics.xlsx  vision.md  vision_observe.md
prompts/_archive/: consolidate_items.md  score_dimension.md
prompts/art/: .gitkeep  rubric_art_v1_2026-06-10.md  rubric_art_v1_2026-06-10_shape_b.md  rubric_art_v2_2026-06-11.md  (+1 more)
rubric/: rubric_playground_v0_1.yaml  rubric_playground_v0_2.yaml  rubric_toy_design_v0_1.yaml
scripts/: backfill_supabase.py  cctv_pull.py  compare_models_report.py  migrate.py  r2_replace_ps_videos.py  redo_transcript_dedupe.py  run_art_rubric_test.py  run_question_bank.py  run_rubric.py  run_spotlight_questions.py  seed_answers_book.py  upload_videos_to_r2.py
(+517 files in other folders)
